# TOGOOVER3373

./: .gitattributes  .gitignore  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json
app/: app.js  control-actions.js  control-events.js  index.html  launcher.mjs  server.mjs  styles.css
data/: campaigns.json  difficulty-grade-sources.json  difficulty-grades.json  difficulty-tiers.json  difficulty-variant-sources.json  effect-rules.example.json  effect-summary.example.json  effect-taxonomy.json  operator-images.json  operator-implementation-history.json  operators.json  overlay-state.example.json  relic-effect-variants.json  relic-images.json  relics.json  selectable-effects.json  special-item-sources.json  squads.json  start-templates.json  wikiru-campaign-sources.json  wikiru-operator-sources.json
docs/: README.md  architecture.md  control-v2-data-scale.json  control-v2-design-handoff.md  control-v2-screen-design.md  control-v2-stitch-design.md  control-v2-stitch-iteration.md  data-sources.md  data-summary.md  effect-calculation.md  maa-ocr-research.md  maaframework-family-roadmap.md  recognition-notes.md  sarkaz-test-guide.md  startup-guide.md  stitch-suki-workbench-brief.md  suki-design-philosophy-ja.md  suki-product-ui-information-architecture.md  suki-workbench-design-principles.md  tauri-migration.md  zero-base-stitch-design.md  zero-base-stitch-iteration.md
review/: README.md  operator-image-review.html  relic-effects-review.csv  relic-effects-review.html  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  storage.rs
(+195 files in other folders)
