[package]
name = "rhodes-obs-commander3373-tauri"
version = "0.1.0"
description = "Tauri shell for RHODES OBS COMMANDER3373"
authors = ["ratedat"]
license = "AGPL-3.0-only"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
url = "2"
